force-app/main/default/objects/Project_Selection_Mapping__c/Project_Selection_Mapping__c.object-meta.xml
<CustomObject>
    <label>BT Project Selection Mapping</label>
    <nameField>
        <label>Project Selection Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Project Selection Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>