force-app/main/default/objects/Project_Selection_Mapping__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plans__c</referenceTo>
    <relationshipName>Project_Selection_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>