force-app/main/default/objects/Project_Selection_Mapping__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>Project_Selection_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>