force-app/main/default/objects/Project_Selection_Mapping__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff</label>
    <referenceTo>Project_Takeoff__c</referenceTo>
    <relationshipName>Project_Selection_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>